2019-09-07  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/91665
	* tree-vect-loop.c (vectorizable_reduction): Punt if base has type
	incompatible with the type of PHI result.

2019-09-07  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR target/91684
	* config/arm/arm.c (arm_block_set_aligned_non_vect): Use
	gen_unaligned_storedi for 4-byte aligned addresses.

2019-09-06  Jim Wilson  <jimw@sifive.com>

	* config/riscv/riscv.c (riscv_option_override): Revert 2019-08-30
	change.

2019-09-06  Segher Boessenkool  <segher@kernel.crashing.org>

	* config/rs6000/rs6000.md (unspec): Delete UNSPEC_MV_CR_OV.

2019-09-06  Segher Boessenkool  <segher@kernel.crashing.org>

	* config/rs6000/rs6000.c (rs6000_rtx_costs) <case UNSPEC>: Delete.
	* config/rs6000/rs6000.md (unspec): Delete UNSPEC_FRSP.

2019-09-06  Uroš Bizjak  <ubizjak@gmail.com>

	PR target/91654
	* config/i386/x86-tune-costs.h (skylake_cost): Raise the
	cost of SSE->integer and integer->SSE moves from 2 to 6.
	(core_cost): Ditto.

2019-09-06  Jakub Jelinek  <jakub@redhat.com>

	* function.c (assign_parm_find_data_types): Use RECORD_OR_UNION_TYPE_P
	before testing TYPE_TRANSPARENT_AGGR.
	* calls.c (initialize_argument_information, load_register_parameters):
	Likewise.

2019-09-06  Richard Earnshaw  <rearnsha@arm.com>

	* config/arm/arm.md (cmp_and): Add short-it variant for thumb2 with
	high regs.
	(cmp_ior): Likewise.

2019-09-06  Martin Liska  <mliska@suse.cz>

	* doc/match-and-simplify.texi: Separate tuples with ;.

2019-09-06  Martin Liska  <mliska@suse.cz>

	PR c++/91125
	* Makefile.in: Remove tlink.o.
	* collect2.c (do_link): New function isolated
	from do_tlink.
	(main): Use.
	* collect2.h (do_tlink): Remove declaration of do_tlink.
	* doc/extend.texi: Remove documentation of -frepo.
	* doc/invoke.texi: Likewise.
	* doc/sourcebuild.texi: Remove cleanup-repo-files.
	* tlink.c: Remove.

2019-09-05  Jakub Jelinek  <jakub@redhat.com>
	    Jim Wilson  <jimw@sifive.com>

	PR target/91635