@@ -609,9 +609,14 @@ gen_split (md_rtx_info *info)
   if (GET_CODE (split) == DEFINE_PEEPHOLE2)
     output_peephole2_scratches (split);
 
+  const char *fn = info->loc.filename;
+  for (const char *p = fn; *p; p++)
+    if (*p == '/')
+      fn = p + 1;
+
   printf ("  if (dump_file)\n");
-  printf ("    fprintf (dump_file, \"Splitting with gen_%s_%d\\n\");\n",
-	  name, info->index);
+  printf ("    fprintf (dump_file, \"Splitting with gen_%s_%d (%s:%d)\\n\");\n",
+	  name, info->index, fn, info->loc.lineno);
 
   printf ("  start_sequence ();\n");
 
